# Smart_Home_ESP32

./: .gitignore
3d/: ProPrj_esp32_pcb_3d_2024-11-01-01-06-07.epro  aiThinkerEsp32CamCase.Front.STL  esp32_pcb_3d.epro  esp32s3-盒子.3mf  esp32s3-盒子2.3mf  esp32s3-盖子.3mf  (+9 more)
smartHome_esp32s3/lib/ui/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_events.c  ui_events.h  ui_themes.c  ui_themes.h
smartHome_esp32s3/lib/ui/components/: ui_comp.h  ui_comp_hook.h  ui_comp_lampbutton.c
smartHome_esp32s3/lib/ui/fonts/: ui_font_UniversalFont.c  ui_font_dan.c  ui_font_smartsystem.c  ui_font_tipFont.c  ui_font_unit.c  ui_font_weatherfont.c
smartHome_esp32s3/lib/ui/images/: ui_img_1282432712.c  ui_img_1809401540.c  ui_img_31831977.c  ui_img_520433372.c  ui_img_a1_png.c  ui_img_c111_png.c  ui_img_c1_png.c  ui_img_cc1_png.c  ui_img_chat_png.c  ui_img_configure_png.c  ui_img_curtain1_png.c  ui_img_curtain_png.c  ui_img_data_png.c  ui_img_dd1_png.c  ui_img_dd2_png.c  ui_img_doorcontact_png.c  ui_img_fan1_png.c  ui_img_fan_png.c  ui_img_h1_png.c  ui_img_h2_png.c  ui_img_hh1_png.c  ui_img_hh2_png.c  ui_img_icon_png.c  ui_img_jc_png.c  ui_img_l1_png.c  ui_img_l2_png.c  ui_img_lamps_png.c  ui_img_mm2_png.c  ui_img_o111_png.c  ui_img_s1_png.c  ui_img_sound1_png.c  ui_img_t2_png.c  ui_img_vv1_png.c  ui_img_w1_png.c  ui_img_wifi_png.c  ui_img_ww2_png.c  ui_img_ww3_png.c
smartHome_esp32s3/lib/ui/screens/: ui_Calendar.c  ui_DateScreen.c  ui_MainScreen.c  ui_StartupScreen.c  ui_lampScreen.c  ui_monitorScreen.c  ui_set1Screen.c  ui_set2Screen.c  ui_setchooseScreen.c  ui_speechScreen.c
(+191 files in other folders)
