SET(SOURCES components/ui_comp_lampbutton.c
    components/ui_comp.c
    screens/ui_StartupScreen.c
    screens/ui_MainScreen.c
    screens/ui_DateScreen.c
    screens/ui_lampScreen.c
    screens/ui_Calendar.c
    screens/ui_setchooseScreen.c
    screens/ui_set1Screen.c
    screens/ui_speechScreen.c
    screens/ui_monitorScreen.c
    ui.c
    components/ui_comp_hook.c
    ui_helpers.c
    ui_events.c
    images/ui_img_icon_png.c
    images/ui_img_31831977.c
    images/ui_img_1282432712.c
    images/ui_img_520433372.c
    images/ui_img_1809401540.c
    images/ui_img_configure_png.c
    images/ui_img_lamps_png.c
    images/ui_img_s1_png.c
    images/ui_img_data_png.c
    images/ui_img_y1_png.c
    images/ui_img_l2_png.c
    images/ui_img_l1_png.c
    images/ui_img_a1_png.c
    images/ui_img_t2_png.c
    images/ui_img_w1_png.c
    images/ui_img_wifi_png.c
    images/ui_img_c1_png.c
    fonts/ui_font_dan.c
    fonts/ui_font_misc.c
    fonts/ui_font_smartsystem.c
    fonts/ui_font_tipFont.c
    fonts/ui_font_unit.c
    fonts/ui_font_UniversalFont.c
    fonts/ui_font_weatherfont.c)

add_library(ui ${SOURCES})
